# llconv

./: readme.md
linux/: CMakeLists.txt  llconv.pro  makefile  project.geany
msvc/: llconv.vcxproj
source/: basic-parser.hpp  debug.hpp  format_string.hpp  h-parser.hpp  keyvals.hpp  llconv.cpp  logging.hpp  plc-elements.hpp  plclib-writer.hpp  pll-parser.hpp  pll-writer.hpp  sipro.hpp  string-utilities.hpp  system.hpp
stuff/: CMakeLists.txt  llconv.pro  makefile  project.geany
test/: compare-output.bat  compare.bat  launch-test.bat  pll-test.bat  test.h  test.pll
